--- a/gen.html
+++ b/gen.html
@@ -17,206 +17,210 @@
   </head>
 
   <body>
-
-    <header>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-            aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Shroom Space Ind.</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <!-- vuoto, è tutto a destra -->
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <!-- Esperienze -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Missione circumlunare</a>
-                  </li>
-                  <li>
-                    <a href="#">Volo a gravità zero</a>
-                  </li>
-                  <li>
-                    <a href="#">Addestramento da astronauta</a>
-                  </li>
-                  <li>
-                    <a href="#">Visita la stazione spaziale</a>
-                  </li>
-                  <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
-                  </li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Altre esperienze</li>
-                  <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
-                  </li>
-                  <li>
-                    <a href="#">Scopri le nostre tecnologie</a>
-                  </li>
-                  <li>
-                    <a href="#">Sicurezza</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- News ed Eventi -->
-              <li>
-                <a href="#about">News ed Eventi</a>
-              </li>
-              <!-- Blog -->
-              <li>
-                <a href="blog.html">Blog</a>
-              </li>
-              <!-- Multimedia -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Foto gallery</a>
-                  </li>
-                  <li>
-                    <a href="#">Video gallery</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Partners -->
-              <li>
-                <a href="#about">Partners</a>
-              </li>
-              <!-- Chi siamo -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Vision</a>
-                  </li>
-                  <li>
-                    <a href="#">Storia</a>
-                  </li>
-                  <li>
-                    <a href="#">Il Team</a>
-                  </li>
-                  <li>
-                    <a href="#">Opportunità lavorative</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Contattaci -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Scrivici</a>
-                  </li>
-                  <li>
-                    <a href="#">Dove trovarci</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Ricerca -->
-              <li>
-                <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-              </li>
-              <!-- Login form -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
-                  <span class="caret"></span>
-                </a>
-                <ul id="login-dp" class="dropdown-menu">
-                  <li>
-                    <div class="row">
-                      <form class="navbar-form" role="form" method="post" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
-                        <div class="form-group">
-                          <label class="sr-only" for="loginEmail">Indirizzo email</label>
-                          <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
-                        </div>
-                        <div class="form-group">
-                          <label class="sr-only" for="loginPassword">Password</label>
-                          <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
-                          <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
-                        </div>
-                        <div>
-                          <label class="sr-only" for="loginSubmit">Indirizzo email</label>
-                          <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
-                        </div>
-                        <hr>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox"> Resta collegato
-                          </label>
-                        </div>
-                      </form>
-                    </div>
-                    <div class="bottom text-center">
-                      Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+          aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href=".">Shroom Space Ind\.</a>
         </div>
-      </nav>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <!-- vuoto, è tutto a destra -->
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <!-- Esperienze -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Missione circumlunare</a>
+                </li>
+                <li>
+                  <a href="#">Volo a gravità zero</a>
+                </li>
+                <li>
+                  <a href="#">Addestramento da astronauta</a>
+                </li>
+                <li>
+                  <a href="#">Visita la stazione spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Altre esperienze</li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Scopri le nostre tecnologie</a>
+                </li>
+                <li>
+                  <a href="#">Sicurezza</a>
+                </li>
+              </ul>
+            </li>
+            <!-- News ed Eventi -->
+            <li>
+              <a href="#about">News ed Eventi</a>
+            </li>
+            <!-- Blog -->
+            <li>
+              <a href="blog.html">Blog</a>
+            </li>
+            <!-- Multimedia -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Foto gallery</a>
+                </li>
+                <li>
+                  <a href="#">Video gallery</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Partners -->
+            <li>
+              <a href="#about">Partners</a>
+            </li>
+            <!-- Chi siamo -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Vision</a>
+                </li>
+                <li>
+                  <a href="#">Storia</a>
+                </li>
+                <li>
+                  <a href="#">Il Team</a>
+                </li>
+                <li>
+                  <a href="#">Opportunità lavorative</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Contattaci -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Scrivici</a>
+                </li>
+                <li>
+                  <a href="#">Dove trovarci</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
+            </li>
+            <!-- Login form -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
+                <span class="caret"></span>
+              </a>
+              <ul id="login-dp" class="dropdown-menu">
+                <li>
+                  <div class="row">
+                    <form class="navbar-form" role="form" method="post" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
+                      <div class="form-group">
+                        <label class="sr-only" for="loginEmail">Indirizzo email</label>
+                        <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
+                      </div>
+                      <div class="form-group">
+                        <label class="sr-only" for="loginPassword">Password</label>
+                        <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
+                        <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
+                      </div>
+                      <div>
+                        <label class="sr-only" for="loginSubmit">Indirizzo email</label>
+                        <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
+                      </div>
+                      <hr>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Resta collegato
+                        </label>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="bottom text-center">
+                    Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
+    <header class="container">
+      <h1>Space Shroom Blog</h1>
+      <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
     </header>
 
-    <div class="container">
-
-      <div class="blog-header">
-        <h1 class="blog-title">Space Shroom Blog</h1>
-        <p class="lead blog-description">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
-      </div>
-
+    <main class="container">
       <div class="row">
 
-        <div class="col-sm-8 blog-main">
-        <h1>Articoli di Gennaio 2018</h1>
-          <div class="blog-post">
-            <h2 class="blog-post-title"><p><img src="img/spaceodissey.jpg"
-              width="100" height="50" alt="trumpet"/>2001: odissea nel fungo</p></h2>
-            <p class="blog-post-meta">Gennaio 1, 2017 da <a href="#">Marco</a></p>
-            <p>2001: Odissea nello spazio (2001: A Space Odyssey) è un film di Stanley Kubrick del 1968, basato su un soggetto di Arthur C. Clarke, il quale ha poi tratto dalla sceneggiatura un romanzo dal titolo omonimo. Benché molti ritengano la pellicola ispirata al racconto di Clarke La sentinella, lo stesso autore[3] ha affermato che "La sentinella assomiglia a 2001 come una ghianda assomiglia a una quercia adulta". La categoria "film di fantascienza" spesso attribuita all'opera di Kubrick non rappresenta in realtà l'intima natura del film, che, pur ambientato nel futuro, tocca problematiche antichissime relativa all'identità della natura umana, al suo destino, al ruolo della conoscenza e della tecnica. Un'umanità alla ricerca di sé, diversa dal resto della natura, definita dal simbolo centrale di un parallelepipedo, razionale, verticale, misterioso, sovrastato da una luce speciale. Una ricerca che, condotta con il prevalente obbiettivo del domino tecnico, trova invece alla fine l'uomo di fronte al suo limite irrisolto, ancora sovrastato dall'incombente figura geometrica, mai veramente risolta.</p>   
-            <h6>Fonte: wikipedia.it</h6>
-          </div><!-- /.blog-post -->
+        <section class="col-sm-9">
+          <div class="panel panel-default list-group">
+            <header class="panel-heading">
+              <h1>Articoli di Gennaio 2018</h1>
+            </header>
+        
+            <article class="list-group-item">
+              <h2>
+                <img src="img/spaceodissey.jpg" width="100" height="50" alt="trumpet"/>
+                <strong>2001: odissea nel fungo</strong>
+              </h2>
+              <hr>
+              <p>Gennaio 1, 2017 da <a href="#">Marco</a></p>
+              <p>2001: Odissea nello spazio (2001: A Space Odyssey) è un film di Stanley Kubrick del 1968, basato su un soggetto di Arthur C. Clarke, il quale ha poi tratto dalla sceneggiatura un romanzo dal titolo omonimo. Benché molti ritengano la pellicola ispirata al racconto di Clarke La sentinella, lo stesso autore[3] ha affermato che "La sentinella assomiglia a 2001 come una ghianda assomiglia a una quercia adulta". La categoria "film di fantascienza" spesso attribuita all'opera di Kubrick non rappresenta in realtà l'intima natura del film, che, pur ambientato nel futuro, tocca problematiche antichissime relativa all'identità della natura umana, al suo destino, al ruolo della conoscenza e della tecnica. Un'umanità alla ricerca di sé, diversa dal resto della natura, definita dal simbolo centrale di un parallelepipedo, razionale, verticale, misterioso, sovrastato da una luce speciale. Una ricerca che, condotta con il prevalente obbiettivo del domino tecnico, trova invece alla fine l'uomo di fronte al suo limite irrisolto, ancora sovrastato dall'incombente figura geometrica, mai veramente risolta.</p>   
+              <h6>Fonte: wikipedia.it</h6>
+            </article>
 
-          <nav>
-            <ul class="pager">
-              <li><a href="blog.html">Torna al blog</a></li>
-            </ul>
-          </nav>
-
-        </div><!-- /.blog-main -->
-
-        <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-            <div class="sidebar-module">
-            <h4>Archivio</h4>
-            <ol class="list-unstyled">
-              <li><a href="gen.html">Gennaio 2018</a></li>
-              <li><a href="dic.html">Dicembre 2017</a></li>
-              <li><a href="nov.html">Novembre 2017</a></li>
-            </ol>
+            <nav class="panel-footer">
+              <ul class="pager">
+                <li><a href="blog.html">Torna al blog</a></li>
+              </ul>
+            </nav>
           </div>
-        </div><!-- /.blog-sidebar -->
+        </section>
 
-      </div><!-- /.row -->
+        <aside class="col-sm-3">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4>Archivio</h4>
+            </div>
+            <div class="list-group">
+              <a class="list-group-item" href="gen.html">Gennaio 2018</a>
+              <a class="list-group-item" href="dic.html">Dicembre 2017</a>
+              <a class="list-group-item" href="nov.html">Novembre 2017</a>
+            </div>
+          </div>
+        </aside>
 
-    </div><!-- /.container -->
+      </div>
+    </main>
 
     <footer class="footer">
       <nav class="navbar-inverse">
