Aggiunti collegamenti mancanti e fix al titolo blog

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="#">Foto gallery</a>
+                    <a href="foto.html">Foto gallery</a>
                   </li>
                   <li>
                     <a href="#">Video gallery</a>
