--- a/nov.html
+++ b/nov.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=".">Shroom Space Ind\.</a>
+          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -75,7 +75,7 @@
             </li>
             <!-- Blog -->
             <li>
-              <a href="blog.html">Blog</a>
+              <a href="blog.html" class="active">Blog</a>
             </li>
             <!-- Multimedia -->
             <li class="dropdown">
@@ -84,7 +84,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Foto gallery</a>
+                  <a href="foto.html">Foto gallery</a>
                 </li>
                 <li>
                   <a href="#">Video gallery</a>
