Fix navbar per pagine loggate

--- a/indexlogged.html
+++ b/indexlogged.html
@@ -86,7 +86,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="#">Foto gallery</a>
+                    <a href="foto.html">Foto gallery</a>
                   </li>
                   <li>
                     <a href="#">Video gallery</a>
@@ -135,39 +135,17 @@
               <li>
                 <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
               </li>
-              <!-- Login form -->
+              <!-- Utente -->
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
                   <span class="caret"></span>
                 </a>
-                <ul id="login-dp" class="dropdown-menu">
+                <ul class="dropdown-menu">
                   <li>
-                    <div class="row">
-                      <form class="navbar-form" role="form" method="post" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
-                        <div class="form-group">
-                          <label class="sr-only" for="loginEmail">Indirizzo email</label>
-                          <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
-                        </div>
-                        <div class="form-group">
-                          <label class="sr-only" for="loginPassword">Password</label>
-                          <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
-                          <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
-                        </div>
-                        <div>
-                          <label class="sr-only" for="loginSubmit">Indirizzo email</label>
-                          <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
-                        </div>
-                        <hr>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox"> Resta collegato
-                          </label>
-                        </div>
-                      </form>
-                    </div>
-                    <div class="bottom text-center">
-                      Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
-                    </div>
+                    <a href="user.html">Profilo utente</a>
+                  </li>
+                  <li>
+                    <a href=".">Logout</a>
                   </li>
                 </ul>
               </li>
