--- a/searched.html
+++ b/searched.html
@@ -203,12 +203,12 @@
 																			</a>
 															</div>
 															<div class="media">
-																			<a href="#fotogallery">
+																			<a href="foto.html">
 																			<div class="media-left">
 																					<img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
 																			</div>
 																			<div class="media-body">
-																				<h4 class="media-heading"> - Foto gallery</h4>
+																				<h4 class="media-heading">Immagine - Foto gallery</h4>
 																				Apri nella foto gallery
 																			</div>
 																			</a>
