--- a/indexlogged.html
+++ b/indexlogged.html
@@ -124,7 +124,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="#">Scrivici</a>
+                    <a href="scrivici.html">Scrivici</a>
                   </li>
                   <li>
                     <a href="#">Dove trovarci</a>
