Aggiunto path alle pagine di blog

--- a/blog.html
+++ b/blog.html
@@ -175,6 +175,10 @@
     </nav>
 
     <header class="container">
+      <ol class="breadcrumb">
+				<li><a href="index.html">Home</a></li>
+				<li class="active">Blog</li>
+			</ol>
       <h1>Space Shroom Blog</h1>
       <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
     </header>
