--- a/nov.html
+++ b/nov.html
@@ -175,8 +175,12 @@
     </nav>
 
     <header class="container">
-        <h1>Space Shroom Blog</h1>
-        <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
+      <ol class="breadcrumb">
+				<li><a href="index.html">Home</a></li>
+				<li class="active">Blog</li>
+			</ol>
+      <h1>Space Shroom Blog</h1>
+      <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
     </header>
 
     <main class="container">
