--- a/ricerca.html
+++ b/ricerca.html
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=".">Shroom Space Ind\.</a>
+          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -174,6 +174,11 @@
     </nav>
     
     <header class="container">
+      <ol class="breadcrumb">
+				<li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li class="active">Risultati ricerca</li>
+			</ol>
       <h1>Space Shroom Blog</h1>
       <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
     </header>
