--- a/foto.html
+++ b/foto.html
@@ -175,6 +175,10 @@
 				</div>
 			</div>
 		</nav>
+		<ol class="breadcrumb">
+			<li><a href="index.html">Home</a></li>
+        	<li class="active">Foto gallery</li>
+		</ol>
 	</header>
 
 	<section class="container-fluid">
