Aggiunto e corretto path a foto gallery e scrivici
Vanno messe in tutte le pagine di livello inferiore

--- a/user.html
+++ b/user.html
@@ -165,7 +165,7 @@
 					<li><a href="indexlogged.html">Home</a></li>
 					<li class="active">Pagina utente</li>
 					</ol>
-							<legend>Benvenuto, admin!</legend>
+							<legend>Benvenuto, user!</legend>
 
 							<!-- Nome-->
 							<div class="form-group">
