--- a/gen.html
+++ b/gen.html
@@ -140,7 +140,7 @@
               <ul id="login-dp" class="dropdown-menu">
                 <li>
                   <div class="row">
-                    <form class="navbar-form" role="form" method="post" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
+                    <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
                       <div class="form-group">
                         <label class="sr-only" for="loginEmail">Indirizzo email</label>
                         <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
