Aggiunta bozza per filtraggio.
Rob sistemala plz

--- a/foto.html
+++ b/foto.html
@@ -187,7 +187,45 @@
 		<p class="lead">Galleria delle nostre foto.</p>
 	</header>
 
-	<section class="container">		
+
+
+	<section class="container">
+			<div class="container">
+				<button class="btn btn-primary btn-md" data-toggle="collapse" data-target="#filter">Filtra</button>
+				<div id="filter" class="collapse">
+					<div class="jumbotron">
+							<div class="row">
+									<div class="col-md-6">
+											<p>Che cosa ti interessa?</p>
+											<div class="checkbox">
+													<label><input type="checkbox" value="" ch>Space</label>
+											</div>
+											<div class="checkbox">
+													<label><input type="checkbox" value="">Universe</label>
+											</div>
+											<div class="checkbox">
+													<label><input type="checkbox" value="">Astronauts</label>
+											</div>
+											<div class="checkbox">
+													<label><input type="checkbox" value="">Earth</label>
+											</div>
+											<div class="checkbox">
+													<label><input type="checkbox" value="">Flight</label>
+											</div>
+											<div class="checkbox">
+													<label><input type="checkbox" value="">Sky</label>
+											</div>
+									</div>
+									<div class="col-md-6">
+										<button class="btn btn-success btn-lg">Applica</button>
+									</div>
+							</div>
+					</div>
+				</div>
+			</div>
+			<br>
+
+		</div>
 		<div class="row">
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
