Rifinitura per filtro foto

--- a/foto.html
+++ b/foto.html
@@ -198,16 +198,16 @@
 									<div class="col-md-6">
 											<p>Che cosa ti interessa?</p>
 											<div class="checkbox">
-													<label><input type="checkbox" value="" ch>Space</label>
+													<label><input type="checkbox" value="" checked>Space</label>
 											</div>
 											<div class="checkbox">
 													<label><input type="checkbox" value="">Universe</label>
 											</div>
 											<div class="checkbox">
-													<label><input type="checkbox" value="">Astronauts</label>
+													<label><input type="checkbox" value="" checked>Astronauts</label>
 											</div>
 											<div class="checkbox">
-													<label><input type="checkbox" value="">Earth</label>
+													<label><input type="checkbox" value="" checked>Earth</label>
 											</div>
 											<div class="checkbox">
 													<label><input type="checkbox" value="">Flight</label>
@@ -217,7 +217,7 @@
 											</div>
 									</div>
 									<div class="col-md-6">
-										<button class="btn btn-success btn-lg">Applica</button>
+										<a href="fotofiltrato.html"><button class="btn btn-success btn-lg">Applica</button></a>
 									</div>
 							</div>
 					</div>
