--- a/partners.html
+++ b/partners.html
@@ -201,7 +201,7 @@
                 <div class="media">
                         <div class="media-body media-middle">
                             <h3 class="media-heading">Space Adventures</h3>
-                            <p>La Space Adventures, Ltd. è un'impresa di turismo spaziale che propone viaggi nello spazio ai privati cittadini. Ad oggi è l'unica compagnia che invia persone nello spazio.
+                            <p>La Space Adventures, Ltd. è un'impresa di turismo spaziale che propone viaggi nello spazio ai privati cittadini. Ad oggi è l'unica compagnia che invia persone nello spazio, oltre la Shroom Space Industries.
 
                                     Fu fondata nel 1998 da Eric C. Anderson insieme ad altri imprenditori del settore aerospaziale.
                                     
