--- a/searched.html
+++ b/searched.html
@@ -188,8 +188,8 @@
 											</ol>
 											<h2>Vediamo cosa ho trovato!</h2>
 											<div class="alert alert-info" role="alert">
-							<a href="#" class="alert-link">Ecco i tuoi risultati:</a>
-						</div>
+							          			<a href="#" class="alert-link">Ecco i tuoi risultati:</a>
+						          			</div>
 											<div class="jumbotron">
 															<div class="media">
 																			<a href="blog.html#ricercato1">
@@ -203,7 +203,7 @@
 																			</a>
 															</div>
 															<div class="media">
-																			<a href="foto.html">
+																			<a href="foto1.html">
 																			<div class="media-left">
 																					<img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
 																			</div>
