--- a/vision.html
+++ b/vision.html
@@ -104,7 +104,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="vision.html">Vision</a>
+                    <a href="#">Vision</a>
                   </li>
                   <li>
                     <a href="#">Storia</a>
@@ -178,87 +178,20 @@
     </header>
 
 		<section>
-			<div id="myCarousel" class="carousel slide" data-ride="carousel">
-				<!-- Indicators -->
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				</ol>
-			
-				<!-- Wrapper for slides -->
-				<div class="carousel-inner" role="listbox">
-					<div class="item active">
-						<img src="img/img1.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/img2.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/img3.jpg" alt="...">
-						<div class="carousel-caption">
-							<!-- niente -->
-						</div>
-					</div>
-				</div>
-			
-				<div class="carousel-caption">
-					<p><a class="btn btn-lg btn-primary" href="#" role="button">Vai alle esperienze</a></p>
-				</div>
-
-				<!-- Controls -->
-				<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-					<span class="sr-only">Precedente</span>
-				</a>
-				<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-					<span class="sr-only">Successivo</span>
-				</a>
-			</div>
-
-			<div class="embed-responsive embed-responsive-16by9">
-				<iframe class="embed-responsive-item" width="854" height="480" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-			</div>
-
-			<div class="container">
-				
-
-			<div class="row">
-				<div class="col-md-6">
-					<h1>News Recenti</h1>
-
-					<h2>Subheading</h2>
-					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-					<h2>Subheading</h2>
-					<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-					<h2>Subheading</h2>
-					<p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-				</div>
-
-				<div class="col-md-6">
-					<h1>Novità dal blog</h1>
-
-					<h2>Subheading</h2>
-					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-					<h2>Subheading</h2>
-					<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-					<h2>Subheading</h2>
-					<p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-				</div>
-			</div>
-
-		</div>
+            <div class="jumbotron">
+                <div class="container">
+                    <h1>Visione aziendale</h1>
+                    <blockquote class="blockquote-reverse">
+                        <p>There is only Passion.</p>
+                        <p> Through Passion I gain Strength.</p>
+                        <p>Through Strength I gain Power.</p>
+                        <p>TThrough Power I gain Victory.</p>
+                        <p>TThrough Victory my chains are Broken.</p>
+                        <p>The Force shall free me.</p>
+                        <footer>DOC, Shroom Space Industries CEO</footer>
+                    </blockquote>
+                </div>
+            </div>
 		</section>
 
 		<footer class="footer">
