Inserito path e ultimi fix all'estetica

--- a/vision.html
+++ b/vision.html
@@ -178,18 +178,24 @@
     </header>
 
 		<section>
-            <div class="jumbotron">
-                <div class="container">
-                    <h1>Visione aziendale</h1>
-                    <blockquote class="blockquote-reverse">
-                        <p>There is only Passion.</p>
-                        <p> Through Passion I gain Strength.</p>
-                        <p>Through Strength I gain Power.</p>
-                        <p>TThrough Power I gain Victory.</p>
-                        <p>TThrough Victory my chains are Broken.</p>
-                        <p>The Force shall free me.</p>
-                        <footer>DOC, Shroom Space Industries CEO</footer>
-                    </blockquote>
+            <div class="container">
+                <ol class="breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li>Vision</li>
+                </ol>
+                <div class="jumbotron">
+                    <div class="container">
+                        <h1>Visione aziendale</h1>
+                        <blockquote class="blockquote-reverse">
+                            <p>There is only Passion.</p>
+                            <p> Through Passion I gain Strength.</p>
+                            <p>Through Strength I gain Power.</p>
+                            <p>Through Power I gain Victory.</p>
+                            <p>Through Victory my chains are Broken.</p>
+                            <p>The Force shall free me.</p>
+                            <footer>DOC, Shroom Space Industries CEO</footer>
+                        </blockquote>
+                    </div>
                 </div>
             </div>
 		</section>
