--- a/blog2.html
+++ b/blog2.html
@@ -93,7 +93,7 @@
             </li>
             <!-- Partners -->
             <li>
-              <a href="#about">Partners</a>
+              <a href="partners.html">Partners</a>
             </li>
             <!-- Chi siamo -->
             <li class="dropdown">
@@ -102,7 +102,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Vision</a>
+                  <a href="vision.html">Vision</a>
                 </li>
                 <li>
                   <a href="#">Storia</a>
@@ -122,7 +122,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Scrivici</a>
+                  <a href="scrivici.html">Scrivici</a>
                 </li>
                 <li>
                   <a href="#">Dove trovarci</a>
