--- a/dic.html
+++ b/dic.html
@@ -92,7 +92,7 @@
             </li>
             <!-- Partners -->
             <li>
-              <a href="#about">Partners</a>
+              <a href="partners.html">Partners</a>
             </li>
             <!-- Chi siamo -->
             <li class="dropdown">
@@ -101,7 +101,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Vision</a>
+                  <a href="vision.html">Vision</a>
                 </li>
                 <li>
                   <a href="#">Storia</a>
@@ -121,7 +121,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="#">Scrivici</a>
+                  <a href="scrivici.html">Scrivici</a>
                 </li>
                 <li>
                   <a href="#">Dove trovarci</a>
